# pokemanager

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  package.yml
about/: index.html
search/: search_index.json
src/pokemanager/: cli.py  const.py  data.py  data_alts.py  main.py  old_main.py  runtime.py  spreadsheet.py  structs.py  typer.py  utils.py
src/pokemanager/cli/: box.py  main.py  spreadsheet.py  stubs.py  utils.py
src/pokemanager/cli_commands/: cli_box.py  cli_pokemon.py  cli_spreadsheet.py  utils.py
src/template_python_project/: cli.py
